--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
+    "maath": "^0.10.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^6.30.2",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0"
   },
