--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "cd backend && python app.py",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
