mongodb connection in local host

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb+srv://minderash:<inderash183>@cluster-own.hlihzzt.mongodb.net/?appName=Cluster-OWN
+# MONGO_URI=mongodb+srv://minderash:inderash183@cluster-own.hlihzzt.mongodb.net/?appName=Cluster
+MONGO_URI=mongodb://127.0.0.1:27017/
